internal/xds/translator/testdata/out/xds-ir/merge-backends-healthcheck-hostname.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - route-a.example.com
    name: first-listener/route-a_example_com
    routes:
    - match:
        prefix: /
      name: route-a
      route:
        cluster: shared-cluster
        upgradeConfigs:
        - upgradeType: websocket
  - domains:
    - route-b.example.com
    name: first-listener/route-b_example_com
    routes:
    - match:
        prefix: /
      name: route-b
      route:
        cluster: shared-cluster
        upgradeConfigs:
        - upgradeType: websocket
